ADD_EXECUTABLE(cpp_02_dev ./chapter02/main.cpp)
ADD_EXECUTABLE(cpp_03_dev ./chapter03/main.cpp ./chapter03/int_dev.cpp ./chapter03/char_dev.cpp)
ADD_EXECUTABLE(cpp_04_dev ./chapter04/main.cpp ./chapter04/array.cpp ./chapter04/string.cpp ./chapter04/struct.cpp ./chapter04/union.cpp
        ./chapter04/enum.cpp ./chapter04/pointer.cpp ./chapter04/array_vector.cpp)

ADD_EXECUTABLE(cpp_05_dev ./chapter05/main.cpp )

