ADD_EXECUTABLE(cpp_02_dev ./chapter02/main.cpp)
ADD_EXECUTABLE(cpp_03_dev ./chapter03/main.cpp ./chapter03/int_dev.cpp ./chapter03/char_dev.cpp)
ADD_EXECUTABLE(cpp_04_dev ./chapter04/main.cpp ./chapter04/array.cpp ./chapter04/string.cpp ./chapter04/struct.cpp ./chapter04/union.cpp
        ./chapter04/enum.cpp ./chapter04/pointer.cpp ./chapter04/array_vector.cpp)

ADD_EXECUTABLE(cpp_05_dev ./chapter05/main.cpp)
ADD_EXECUTABLE(cpp_06_dev ./chapter06/main.cpp ./chapter06/fileIO.cpp)
ADD_EXECUTABLE(cpp_07_dev ./chapter07/main.cpp ./chapter07/para_is_arr.cpp ./chapter07/func_pointer.cpp)
ADD_EXECUTABLE(cpp_08_dev ./chapter08/main.cpp)
ADD_EXECUTABLE(cpp_09_dev ./chapter09/main.cpp ./chapter09/header_test.cpp ./chapter09/header_test.h)
ADD_EXECUTABLE(cpp_10_dev ./chapter10/main.cpp ./chapter10/Stock.h ./chapter10/Stock.cpp)
ADD_EXECUTABLE(cpp_11_dev ./chapter11/main.cpp ./chapter11/mytime0.cpp ./chapter11/mytime0.h)
ADD_EXECUTABLE(cpp_12_dev ./chapter12/main.cpp ./chapter12/stringbad.cpp ./chapter12/stringbad.h
        ./chapter12/queue.cpp ./chapter12/queue.h)
ADD_EXECUTABLE(cpp_13_dev ./chapter13/main.cpp ./chapter13/tabtenn0.cpp ./chapter13/tabtenn0.h
        ./chapter13/abstract0.cpp ./chapter13/abstract0.h)
ADD_EXECUTABLE(cpp_14_dev ./chapter14/main.cpp ./chapter14/human.cpp ./chapter14/human.h
        ./chapter14/stacktp.cpp ./chapter14/stacktp.h)


